XWATCH-161: Make XWiki Watch compatible with IE6 / IE7 * fixed action buttons positioning (feed, group and keyword actions) * fixed date selectors alignment XWATCH-113: Change Watch to make it Toucan-compliant * fixed missing global footer bug in firefox in quirks mode
fixes provided with help from Laurent Lunati


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-products/xwiki-watch/trunk@10873 f329d543-caf0-0310-9063-dda96c69346f

--- a/gwt/src/main/java/com/xpn/xwiki/watch/public/Watch.css
+++ b/gwt/src/main/java/com/xpn/xwiki/watch/public/Watch.css
@@ -1,3 +1,7 @@
+/* fix height for containers in toucan, in quirks mode */
+#xwikimaincontainerinner, #contentcontainer {
+    height: auto;
+}
 
 .watch-main {
     width: 100%;
@@ -237,6 +241,10 @@ div.watch-feedtree-feed {
 	color: #FFFFFF;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+.watch-feedtree-feedaction .gwt-Label, .watch-feedtree-groupaction .gwt-Label, .watch-keyword-keywordaction .gwt-Label {
+    display: inline;
 }
 
 div.watch-feedtree-editfeed, div.watch-feedtree-editgroup, div.watch-keyword-editkeyword {
@@ -485,6 +493,7 @@ div.watch-article-tags-text, div.watch-article-comments-title-text {
     float: right;
     width: 200px;
     background-color: #868c94;
+    overflow-x: auto;
 }
 
 div.watch-filter-title-text {
@@ -929,8 +938,8 @@ div.watch-filter-date-title-label, div.watch-filter-date-label {
 table.calendar-panel, button.watch-filter-date-month-button, button.watch-filter-date-year-button {
 	background-color: #E6EAEE;
 }
-table.calendar-panel {
-	margin: auto;
+div.watch-datestartwidget, div.watch-dateendwidget {
+    padding-left: 10px;
 }
 div.calendar-dateCell {
 	cursor: pointer;
